--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 
 .container {
     display: grid;
-  grid-gap: 1em;
-  grid-template-rows: repeat(var(--grid-rows), 1fr);
-  grid-template-columns: repeat(var(--grid-cols), 1fr);
+    /*grid-gap: 1em;*/
+    grid-template-rows: repeat(var(--grid-rows), 1fr);
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
 }
 
 .square {
-    
-
+    height: 5px;
+    width: 5px;
     padding: 1em;
     border: 1px solid black;
     text-align: center;
