--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
-:root {
-    --grid-cols: 1;
-    --grid-rows: 1;
-  }
+
+
+* {
+    box-sizing: border-box;
+}
 
 .container {
     display: grid;
-    /*grid-gap: 1em;*/
-    grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-cols), 1fr);
+    
+   
+    grid-template-columns: repeat(16, 25px [col-start]);
+    row-gap: 0;
+    column-gap: 0
 }
 
 .square {
     height: 5px;
     width: 5px;
-    padding: 1em;
-    border: 1px solid black;
+    padding: 5px;
+    margin: 5px;
+    /*border: 1px solid black;*/
     text-align: center;
+    background-color: black;
 }
