Fix button to create grid with prompt field

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-
+:root {
+    --grid-rows: 1;
+    --grid-cols: 1;
+  }
 
 * {
     box-sizing: border-box;
@@ -6,9 +9,11 @@
 
 .container {
     display: grid;
-    
+    width: 0;
    
-    grid-template-columns: repeat(16, 35px [col-start]);
+    /*grid-template-columns: repeat(16, 35px [col-start]);*/
+    grid-template-rows: repeat(var(--grid-rows), 1fr);
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
     
 }
 
